overlays/production/ingress/backend.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lc-assignment-ingress
  annotations:
    cert-manager.io/cluster-issuer: le-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: lc-assignment-backend.topcode.gr
      http:
        paths:
          - backend:
              service:
                name: lc-assignment-backend
                port:
                  number: 5013

            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - lc-assignment-backend.topcode.gr
      secretName: lc-assignment-backend-tls
